<?xml version="1.0"?>
<package format="2">
  <name>rviz_pose_tool</name>
  <version>0.1.0</version>
  <description>Improved tool to set a 2D pose estimate in rviz</description>

  <maintainer email="simonpaulschlegel@googlemail.com">Simon Schlegel</maintainer>
  <license>BSD</license>
  <author email="simonpaulschlegel@googlemail.com">Simon Schlegel</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <rviz plugin="${prefix}/pose_tool_description.xml"/>
  </export>

</package>
